1. fix bug of `count` params, it should be in body. 2. Refactor to java 1.7